# xlNumba

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sonar-project.properties  tox.ini
.github/workflows/: main.yml
example/: example.py
pyxloptimizer/: __init__.py  ast.py  compiler.py  excel_reference.py  exceptions.py  execution.py  logger.py  shape.py  shunting_yards.py
pyxloptimizer/excel_functions/: __init__.py  function_details.py  logical.py  lookup.py  mathematical.py  special.py  statistical.py  text.py  user_functions.py
pyxloptimizer/nodes/: __init__.py  array.py  binary_ops.py  function.py  io.py  literal.py  node.py  random.py
pyxloptimizer/optimizations/: __init__.py  array_inplace.py  collapse_literals.py  lazy_conditional.py  merge_array.py
tests/: __init__.py  conftest.py  test_basic.py  test_benchmark.py  test_errors.py  test_excel_util.py  test_functions.py  test_operators.py  test_random.py  test_ranges.py  test_user_function.py  util.py
tests/fixtures/: basic.xlsx  benchmark.xlsx  functions.xlsx  operators.xlsx  random.xlsx  ranges.xlsx
tests/test_optimizations/: test_collapse_literals.py  test_merge_array.py
xlnumba/: __init__.py  ast.py  compiler.py  compiler_frame.py  excel_reference.py  execution.py  logger.py  shape.py  shunting_yards.py  special_functions.py
xlnumba/excel_functions/: __init__.py  function_details.py  information.py  lookup.py  mathematical.py  random.py  special.py  statistical.py  text.py
xlnumba/nodes/: array.py  binary_ops.py  io.py  literal.py  node.py
xlnumba/optimizations/: __init__.py  array_inplace.py  collapse_literals.py  merge_array.py
