[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "xlnumba"
dependencies = [
    "astor>=0.8.1",
    "numba>=0.59.0",
    "numpy>=1.26.4",
    "openpyxl>=3.1.2",
    "scipy>=1.15.2"
]
description = "A package for converting excel files to Numba optimized python code"
license = "MIT"
keywords = ["excel", "numba", "optimization"]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
repository = "https://github.com/tarkmeper/xlNumba.git"

[project.dev-dependencies]
tests = [
    "pytest>=8.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.1.0"
]

[tool.hatch.version]
path = "xlnumba/__init__.py"


[tool.tox]
requires = ["tox>=3.24.4"]
envlist = ["py312"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
deps = ["pytest", "pytest-cov", "pytest-benchmark"]
commands = [["pytest", "--cov=xlnumba", "--cov-report=xml", "--cov-config=pyproject.toml", "--cov-branch", "--benchmark"]]

[tool.coverage.run]
source = ['xlnumba']

[tool.pytest.ini_options]
addopts = "--cov=xlnumba --cov-report html --cov-branch"